Implement querying system information

--- a/DrunkenIronman/DrunkenIronman/DrunkenIronman.vcxproj
+++ b/DrunkenIronman/DrunkenIronman/DrunkenIronman.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Util.h" />
+    <ClInclude Include="Precomp.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8BE6DAED-7FC8-4234-8F0F-B3C1A13FEC03}</ProjectGuid>
