--- a/DrunkenIronman/Drink/Drink.vcxproj
+++ b/DrunkenIronman/Drink/Drink.vcxproj
@@ -180,9 +180,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Driver.c" />
+    <ClCompile Include="MessageTable.c" />
     <ClCompile Include="VgaDump.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MessageTable.h" />
     <ClInclude Include="VgaDump.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
