--- a/DrunkenIronman/Drink/Drink.vcxproj.filters
+++ b/DrunkenIronman/Drink/Drink.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="MessageTable">
       <UniqueIdentifier>{5e7abd98-19bb-4cee-9c96-afae4fd7ca57}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ImageParse">
+      <UniqueIdentifier>{ae2f0c31-4126-436f-86ea-5393548fe9d6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Driver.c">
@@ -21,6 +24,9 @@
     <ClCompile Include="MessageTable.c">
       <Filter>MessageTable</Filter>
     </ClCompile>
+    <ClCompile Include="ImageParse.c">
+      <Filter>ImageParse</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VgaDump.h">
@@ -28,6 +34,9 @@
     </ClInclude>
     <ClInclude Include="MessageTable.h">
       <Filter>MessageTable</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageParse.h">
+      <Filter>ImageParse</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
