Implement some string manipulation routines

--- a/DrunkenIronman/Drink/Drink.vcxproj
+++ b/DrunkenIronman/Drink/Drink.vcxproj
@@ -181,11 +181,13 @@
     <ClCompile Include="Driver.c" />
     <ClCompile Include="ImageParse.c" />
     <ClCompile Include="MessageTable.c" />
+    <ClCompile Include="Util.c" />
     <ClCompile Include="VgaDump.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageParse.h" />
     <ClInclude Include="MessageTable.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="VgaDump.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
