Add simple binary matching module

--- a/Drink/Drink.vcxproj
+++ b/Drink/Drink.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="Carpenter.c" />
     <ClCompile Include="Driver.c" />
     <ClCompile Include="ImageParse.c" />
+    <ClCompile Include="Match.c" />
     <ClCompile Include="MessageTable.c" />
     <ClCompile Include="Util.c" />
     <ClCompile Include="VgaDump.c" />
@@ -113,6 +114,7 @@
   <ItemGroup>
     <ClInclude Include="Carpenter.h" />
     <ClInclude Include="ImageParse.h" />
+    <ClInclude Include="Match.h" />
     <ClInclude Include="MessageTable.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="VgaDump.h" />
