--- a/Drink/Drink.vcxproj.filters
+++ b/Drink/Drink.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Match">
       <UniqueIdentifier>{f8f8d732-8a56-4b1d-8678-6e10cbaee3b1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="QRPatch">
+      <UniqueIdentifier>{95948e8b-44da-4222-9832-65fc43814f2e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Driver.c">
@@ -45,6 +48,9 @@
     <ClCompile Include="Match.c">
       <Filter>Match</Filter>
     </ClCompile>
+    <ClCompile Include="QRPatch.c">
+      <Filter>QRPatch</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VgaDump.h">
@@ -64,6 +70,9 @@
     </ClInclude>
     <ClInclude Include="Match.h">
       <Filter>Match</Filter>
+    </ClInclude>
+    <ClInclude Include="QRPatch.h">
+      <Filter>QRPatch</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
